--- a/Articles.html
+++ b/Articles.html
@@ -2,13 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/slideblog.css">
-    <link rel="stylesheet" href="style.css">
+    <title>The Paper - Articles</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
     <link rel= "stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="style.css">
+
+
   </head>
   <body>
     <div class="header">
@@ -20,67 +21,66 @@
       <ul class="menu">
         <a href="index.html">Home</a>
         <a href="#">About</a>
-        <a href="Articles.html">Authors</a>
-        <a href="article1.html">Articles</a>
+        <a href="Authors.html">Authors</a>
+        <a href="Articles.html">Articles</a>
         <a href="#">Contacts</a>
         <a href="#">
-          <img src="Images/sweden.png" height="32" width="32">
+          <img src="Images/sweden.png" height="32" width="32" id="flag">
         </a>
         <label for="chk" class="hide-menu-btn">
           <i class="fas fa-times"></i>
         </label>
       </ul>
     </div>
-    <div class="blogs owl-carousel">
-      <div class="blog">
-        <img src="images/1.jpg" alt="">
-        <div class="blog-description">
-          <div class="categorie">Technology</div>
-          <h2 class="title">Li-Fi - A Revolution</h2>
-          <div class="Authors"><i>Hugo Sahlin</i></div>
-          <a href="Articles/lifi.html" class="btn">Read More</a>
-        </div>
-      </div>
+    <div class="main">
+      <div class="cards">
+          <div class="card">
+              <img src="Images/1.jpg" alt="background" style="width:100%">
+              <div class="card-container">
+                <h4><b>Li-Fi, A revolution</b></h4>
+                <p>Hugo Sahlin</p>
+                <a href="Articles/lifi.html" class="btn2"><p>Read More</p></a>
+              </div>
+          </div>
+          <div class="card">
+              <img src="Images/IranVsUSA.png" alt="background" style="width:100%">
+              <div class="card-container">
+                <h4><b>USA Vs Iran</b></h4>
+                <p>Lucas Olson</p>
+                <a href="#" class="btn2"><p>Read More</p></a>
+              </div>
+          </div>
+          <div class="card">
+              <img src="Images/football.jpeg" alt="background" style="width:100%">
+              <div class="card-container">
+                <h4><b>Zlatan Ibrahimovic’s statue broken by Malmo FF fans</b></h4>
+                <p>Samuel Rod</p>
+                <a href="#" class="btn2"><p>Read More</p></a>
+              </div>
+          </div>
+          <div class="card">
+                <img src="Images/2.jpg" alt="background" style="width:100%">
+                <div class="card-container">
+                  <h4><b>Lorum Ipsum</b></h4>
+                  <p>Dolor Amortia</p>
+                  <a href="#" class="btn2"><p>Read More</p></a>
+                </div>
+          </div>
+          <div class="card">
+              <img src="Images/1.jpg" alt="background" style="width:100%">
+              <div class="card-container">
+                <h4><b>Li-Fi, A revolution</b></h4>
+                <p>Technology</p>
+                <a href="#" class="btn2"><p>Read More</p></a>
+              </div>
+          </div>
 
-      <div class="blog">
-        <img src="Images/2.jpg" alt="">
-        <div class="blog-description">
-          <div class="categorie">Cars</div>
-          <h2 class="title">Lorem ipsum dolor sit amet</h2>
-          <div class="date">Jan 13 2020</div>
-          <a href="#" class="btn">Read More</a>
-        </div>
-      </div>
-
-      <div class="blog">
-        <img src="Images/3.jpg" alt="">
-        <div class="blog-description">
-          <div class="categorie">Coding</div>
-          <h2 class="title">Lorem ipsum dolor sit amet</h2>
-          <div class="date">Jan 13 2020</div>
-          <a href="#" class="btn">Read More</a>
-        </div>
-      </div>
-
-      <div class="blog">
-        <img src="Images/4.jpg" alt="">
-        <div class="blog-description">
-          <div class="categorie">Sports</div>
-          <h2 class="title">Lorem ipsum dolor sit amet</h2>
-          <div class="date">Jan 13 2020</div>
-          <a href="#" class="btn">Read More</a>
-        </div>
+          <div class="card">
+              <img src="Images/1.jpg" alt="background" style="width:100%">
+              <h4><b>Li-Fi, A revolution</b></h4>
+              <p>Technology</p>
+              <a href="#" class="btn2"><p>Read More</p></a>
+          </div>
       </div>
     </div>
-
-    <script type="text/javascript">
-      $(".owl-carousel").owlCarousel({
-        items: 2,
-        margin: 20,
-        loop: true,
-        center: true,
-        dots: false
-      });
-    </script>
-  </body>
 </html>
