For other screens
Added new rules for articles that improve the viewing on different sized devices

--- a/Articles.html
+++ b/Articles.html
@@ -53,7 +53,7 @@
           <div class="card">
               <img src="Images/football.jpeg" alt="background" style="width:100%">
               <div class="card-container">
-                <h4><b>Zlatan Ibrahimovic’s statue broken by Malmo FF fans</b></h4>
+                <h4><b>Zlatan Ibrahimovic’s statue torn down</b></h4>
                 <p>Samuel Rod</p>
                 <a href="#" class="btn2"><p>Read More</p></a>
               </div>
