--- a/Articles.html
+++ b/Articles.html
@@ -35,7 +35,7 @@
     <div class="main">
       <div class="cards">
           <div class="card">
-              <img src="Images/1.jpg" alt="background" style="width:100%">
+              <img src="Images/lifi.jpg">
               <div class="card-container">
                 <h4><b>Li-Fi, A revolution</b></h4>
                 <p>Hugo Sahlin</p>
@@ -43,7 +43,7 @@
               </div>
           </div>
           <div class="card">
-              <img src="Images/IranVsUSA.png" alt="background" style="width:100%">
+              <img src="Images/IranVsUSA.png">
               <div class="card-container">
                 <h4><b>USA Vs Iran</b></h4>
                 <p>Lucas Olson</p>
@@ -51,35 +51,30 @@
               </div>
           </div>
           <div class="card">
-              <img src="Images/football.jpeg" alt="background" style="width:100%">
+              <img src="Images/football.jpg">
               <div class="card-container">
-                <h4><b>Zlatan Ibrahimovic’s statue torn down</b></h4>
-                <p>Samuel Rod</p>
-                <a href="#" class="btn2"><p>Read More</p></a>
-              </div>
-          </div>
-          <div class="card">
-                <img src="Images/2.jpg" alt="background" style="width:100%">
-                <div class="card-container">
-                  <h4><b>Lorum Ipsum</b></h4>
-                  <p>Dolor Amortia</p>
+                <h4><b>Zlatan's Statue torn down</b></h4>
+                <div class="AuRm">
+                  <p>Samuel Rod</p>
                   <a href="#" class="btn2"><p>Read More</p></a>
                 </div>
+              </div>
           </div>
           <div class="card">
-              <img src="Images/1.jpg" alt="background" style="width:100%">
+              <img src="Images/Koala.jpg">
               <div class="card-container">
-                <h4><b>Li-Fi, A revolution</b></h4>
-                <p>Technology</p>
+                <h4><b>How to water Koalas</b></h4>
+                <p>Max Gille</p>
                 <a href="#" class="btn2"><p>Read More</p></a>
               </div>
           </div>
-
           <div class="card">
-              <img src="Images/1.jpg" alt="background" style="width:100%">
-              <h4><b>Li-Fi, A revolution</b></h4>
-              <p>Technology</p>
-              <a href="#" class="btn2"><p>Read More</p></a>
+              <img src="Images/barzelona.jpg">
+              <div class="card-container">
+                <h4><b>On the terrible defeat</b></h4>
+                <p>Anton Ekberg</p>
+                <a href="#" class="btn2"><p>Read More</p></a>
+              </div>
           </div>
       </div>
     </div>
