New author card + improved articles

--- a/Articles.html
+++ b/Articles.html
@@ -13,17 +13,15 @@
   </head>
   <body>
     <div class="header">
-      <h2 class="logo">The Paper</h2>
+      <a href="index.html"><h2 class="logo">The Paper</h2></a>
       <input type="checkbox" id="chk">
       <label for="chk" class="show-menu-btn">
         <i class="fas fa-ellipsis-h"></i>
       </label>
       <ul class="menu">
-        <a href="index.html">Home</a>
         <a href="#">About</a>
         <a href="Authors.html">Authors</a>
         <a href="Articles.html">Articles</a>
-        <a href="#">Contacts</a>
         <a href="#">
           <img src="Images/sweden.png" height="32" width="32" id="flag">
         </a>
@@ -34,46 +32,46 @@
     </div>
     <div class="main">
       <div class="cards">
-          <div class="card">
+          <div class="card"><a href="Articles/lifi.html">
               <img src="Images/lifi.jpg">
               <div class="card-container">
                 <h4><b>Li-Fi, A revolution</b></h4>
                 <p>Hugo Sahlin</p>
-                <a href="Articles/lifi.html" class="btn2"><p>Read More</p></a>
               </div>
+          </a>
           </div>
-          <div class="card">
+          <div class="card"><a href="#">
               <img src="Images/IranVsUSA.png">
               <div class="card-container">
                 <h4><b>USA Vs Iran</b></h4>
                 <p>Lucas Olson</p>
-                <a href="#" class="btn2"><p>Read More</p></a>
               </div>
+          </a>
           </div>
-          <div class="card">
+          <div class="card"><a href="#">
               <img src="Images/football.jpg">
               <div class="card-container">
                 <h4><b>Zlatan's Statue torn down</b></h4>
                 <div class="AuRm">
                   <p>Samuel Rod</p>
-                  <a href="#" class="btn2"><p>Read More</p></a>
                 </div>
+              </a>
               </div>
           </div>
-          <div class="card">
+          <div class="card"><a href="#">
               <img src="Images/Koala.jpg">
               <div class="card-container">
                 <h4><b>How to water Koalas</b></h4>
                 <p>Max Gille</p>
-                <a href="#" class="btn2"><p>Read More</p></a>
+              </a>
               </div>
           </div>
-          <div class="card">
+          <div class="card"><a href="#">
               <img src="Images/barzelona.jpg">
               <div class="card-container">
                 <h4><b>On the terrible defeat</b></h4>
                 <p>Anton Ekberg</p>
-                <a href="#" class="btn2"><p>Read More</p></a>
+                </a>
               </div>
           </div>
       </div>
