--- a/Articles.html
+++ b/Articles.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
     <link rel= "stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="style.css">
-
-
   </head>
   <body>
     <div class="header">
@@ -22,7 +20,7 @@
         <a href="#">About</a>
         <a href="Authors.html">Authors</a>
         <a href="Articles.html">Articles</a>
-        <a href="#">
+        <a href="swedishArticles.html">
           <img src="Images/sweden.png" height="32" width="32" id="flag">
         </a>
         <label for="chk" class="hide-menu-btn">
@@ -71,6 +69,22 @@
               <div class="card-container">
                 <h4><b>On the terrible defeat</b></h4>
                 <p>Anton Ekberg</p>
+                </a>
+              </div>
+          </div>
+          <div class="card"><a href="#">
+            <img src="Images/theRiseOfSkywalker.jpeg">
+              <div class="card-container">
+                <h4><b>The Rise of Skywalker - A Review</b></h4>
+                <p>Hugo Sahlin</p>
+                </a>
+              </div>
+          </div>
+          <div class="card"><a href="#">
+            <img src="Images/theWeather.jpeg">
+              <div class="card-container">
+                <h4><b>The Weather</b></h4>
+                <p>Samuel Rod</p>
                 </a>
               </div>
           </div>
