USAvsIran + alla artikelkort

--- a/Articles.html
+++ b/Articles.html
@@ -38,7 +38,7 @@
               </div>
           </a>
           </div>
-          <div class="card"><a href="#">
+          <div class="card"><a href="Articles/USAvsIran.html">
               <img src="Images/IranVsUSA.png">
               <div class="card-container">
                 <h4><b>USA Vs Iran</b></h4>
