--- a/swedishArticles.html
+++ b/swedishArticles.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
   <html lang="en" dir="ltr">
     <head>
       <meta charset="utf-8">
@@ -21,8 +21,8 @@
           <a href="#">Om</a>
           <a href="Authors.html">Författare</a>
           <a href="Articles.html">Artiklar</a>
-          <a href="swedishArticles.html">
-            <img src="Images/sweden.png" height="32" width="32" id="flag">
+          <a href="Articles.html">
+            <img src="Images/UK.png" height="32" width="32" id="flag">
           </a>
           <label for="chk" class="hide-menu-btn">
             <i class="fas fa-times"></i>
@@ -36,6 +36,54 @@
               <div class="card-container">
                 <h4><b>The Witcher</b></h4>
                 <p>Lucas Olson</p>
+              </div>
+            </a>
+          </div>
+          <div class="card"><a href="#">
+              <img src="Images/apple.jpg">
+              <div class="card-container">
+                <h4><b>Från Apple 2020</b></h4>
+                <p>Hugo Sahlin</p>
+              </div>
+            </a>
+          </div>
+          <div class="card"><a href="#">
+              <img src="Images/police.jpg">
+              <div class="card-container">
+                <h4><b>Om Sveriges Poliser</b></h4>
+                <p>Lucas Olson</p>
+              </div>
+            </a>
+          </div>
+          <div class="card"><a href="#">
+              <img src="Images/football-unsplash.jpg">
+              <div class="card-container">
+                <h4><b>Om fotbollen 2020</b></h4>
+                <p>Anton Ekberg</p>
+              </div>
+            </a>
+          </div>
+          <div class="card"><a href="#">
+              <img src="Images/boko-haram-unsplash.jpg">
+              <div class="card-container">
+                <h4><b>Boko Haram</b></h4>
+                <p>Samuel Rod</p>
+              </div>
+            </a>
+          </div>
+          <div class="card"><a href="#">
+              <img src="Images/Cervinia.jpg">
+              <div class="card-container">
+                <h4><b>Paradiset Cervinia</b></h4>
+                <p>Samuel Rod</p>
+              </div>
+            </a>
+          </div>
+          <div class="card"><a href="#">
+              <img src="Images/school-unsplash.jpg">
+              <div class="card-container">
+                <h4><b>Skolans fall</b></h4>
+                <p>Hugo Sahlin</p>
               </div>
             </a>
           </div>
