Added all done english articles + added a language chooser

--- a/Articles.html
+++ b/Articles.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>The Paper - Articles</title>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
     <link rel= "stylesheet" href="css/navbar.css">
@@ -19,13 +18,11 @@
       <ul class="menu">
         <a href="#">About</a>
         <a href="Authors.html">Authors</a>
-        <a href="Articles.html">Articles</a>
-        <a href="swedishArticles.html">
-          <img src="Images/sweden.png" height="32" width="32" id="flag">
-        </a>
+        <a href="LS.html">Articles</a>
         <label for="chk" class="hide-menu-btn">
           <i class="fas fa-times"></i>
         </label>
+
       </ul>
     </div>
     <div class="main">
@@ -33,7 +30,7 @@
           <div class="card"><a href="Articles/lifi.html">
               <img src="Images/lifi.jpg">
               <div class="card-container">
-                <h4><b>Li-Fi, A revolution</b></h4>
+                <h3><b>Li-Fi, A revolution</b></h3>
                 <p>Hugo Sahlin</p>
               </div>
           </a>
@@ -41,53 +38,58 @@
           <div class="card"><a href="/Articles/USAvsIran.html">
               <img src="Images/IranVsUSA.png">
               <div class="card-container">
-                <h4><b>USA Vs Iran</b></h4>
+                <h3><b>Iran Vs USA</b></h3>
                 <p>Lucas Olson</p>
               </div>
           </a>
           </div>
-          <div class="card"><a href="#">
+          <div class="card"><a href="/Articles/ZlatanStatue.html">
               <img src="Images/football.jpg">
               <div class="card-container">
-                <h4><b>Zlatan's Statue torn down</b></h4>
+                <h3><b>Zlatan's Statue torn down</b></h3>
                 <div class="AuRm">
                   <p>Samuel Rod</p>
                 </div>
               </a>
               </div>
           </div>
-          <div class="card"><a href="#">
+          <div class="card"><a href="/Articles/Koalas.html">
               <img src="Images/Koala.jpg">
               <div class="card-container">
-                <h4><b>How to water Koalas</b></h4>
+                <h3><b>How to water Koalas</b></h3>
                 <p>Max Gille</p>
               </a>
               </div>
           </div>
-          <div class="card"><a href="#">
+          <div class="card"><a href="/Articles/chronicle.html">
               <img src="Images/barzelona.jpg">
               <div class="card-container">
-                <h4><b>On the terrible defeat</b></h4>
+                <h3><b>On the terrible defeat</b></h3>
                 <p>Anton Ekberg</p>
                 </a>
               </div>
           </div>
-          <div class="card"><a href="#">
+          <div class="card"><a href="/Articles/RoS.html">
             <img src="Images/theRiseOfSkywalker.jpeg">
               <div class="card-container">
-                <h4><b>The Rise of Skywalker - A Review</b></h4>
+                <h3><b>On the rise of skywalker</b></h3>
                 <p>Hugo Sahlin</p>
                 </a>
               </div>
           </div>
-          <div class="card"><a href="#">
+          <div class="card"><a href="/Articles/Weather.html">
             <img src="Images/theWeather.jpeg">
               <div class="card-container">
-                <h4><b>The Weather</b></h4>
+                <h3><b>The Weather</b></h3>
                 <p>Samuel Rod</p>
                 </a>
               </div>
           </div>
       </div>
     </div>
+  </body>
+
+  <footer>
+
+  </footer>
 </html>
