--- a/swedishArticles.html
+++ b/swedishArticles.html
@@ -20,10 +20,7 @@
         <ul class="menu">
           <a href="#">Om</a>
           <a href="Authors.html">Författare</a>
-          <a href="Articles.html">Artiklar</a>
-          <a href="Articles.html">
-            <img src="Images/UK.png" height="32" width="32" id="flag">
-          </a>
+          <a href="LS.html">Artiklar</a>
           <label for="chk" class="hide-menu-btn">
             <i class="fas fa-times"></i>
           </label>
