Fixat lucas namn samt LS

--- a/Articles.html
+++ b/Articles.html
@@ -39,7 +39,7 @@
               <img src="Images/IranVsUSA.png">
               <div class="card-container">
                 <h3><b>Iran Vs USA</b></h3>
-                <p>Lucas Olson</p>
+                <p>Lucas Olsson</p>
               </div>
           </a>
           </div>
