--- a/swedishArticles.html
+++ b/swedishArticles.html
@@ -28,11 +28,11 @@
       </div>
       <div class="main">
         <div class="cards">
-          <div class="card"><a href="#">
+          <div class="card"><a href="SweArticles/Witcher.html">
               <img src="Images/theWitcher.jpeg">
               <div class="card-container">
                 <h4><b>The Witcher</b></h4>
-                <p>Lucas Olson</p>
+                <p>Lucas Olsson</p>
               </div>
             </a>
           </div>
@@ -48,7 +48,7 @@
               <img src="Images/police.jpg">
               <div class="card-container">
                 <h4><b>Om Sveriges Poliser</b></h4>
-                <p>Lucas Olson</p>
+                <p>Lucas Olsson</p>
               </div>
             </a>
           </div>
