--- a/Authors.html
+++ b/Authors.html
@@ -18,10 +18,7 @@
       <ul class="menu">
         <a href="#">About</a>
         <a href="Authors.html">Authors</a>
-        <a href="Articles.html">Articles</a>
-        <a href="#">
-          <img src="Images/sweden.png" height="32" width="32">
-        </a>
+        <a href="LS.html">Articles</a>
         <label for="chk" class="hide-menu-btn">
           <i class="fas fa-times"></i>
         </label>
