Fixat about samt homepage och alla artiklar som krävs för att presentera

--- a/swedishArticles.html
+++ b/swedishArticles.html
@@ -18,7 +18,7 @@
           <i class="fas fa-ellipsis-h"></i>
         </label>
         <ul class="menu">
-          <a href="#">Om</a>
+          <a href="about.html">Om</a>
           <a href="Authors.html">Författare</a>
           <a href="LS.html">Artiklar</a>
           <label for="chk" class="hide-menu-btn">
@@ -36,7 +36,7 @@
               </div>
             </a>
           </div>
-          <div class="card"><a href="#">
+          <div class="card"><a href="SweArticles/Apple.html">
               <img src="Images/apple.jpg">
               <div class="card-container">
                 <h4><b>Från Apple 2020</b></h4>
@@ -60,7 +60,7 @@
               </div>
             </a>
           </div>
-          <div class="card"><a href="#">
+          <div class="card"><a href="SweArticles/BK.html">
               <img src="Images/boko-haram-unsplash.jpg">
               <div class="card-container">
                 <h4><b>Boko Haram</b></h4>
@@ -84,6 +84,15 @@
               </div>
             </a>
           </div>
+          <div class="card"><a href="/SweArticles/RT.html">
+              <img src="https://images.unsplash.com/photo-1524678714210-9917a6c619c2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1949&q=80">
+              <div class="card-container">
+                <h3><b>Respekten för tid</b></h3>
+                <p>Anton Ekberg</p>
+              </a>
+            </div>
+          </div>
+
         </div>
     </body>
   </html>
