--- a/Authors.html
+++ b/Authors.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>The Paper - Authors</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="css/profilecard.css">
     <link rel= "stylesheet" href="css/navbar.css">
@@ -10,13 +10,13 @@
   </head>
   <body>
     <div class="header">
-      <h2 class="logo">The Paper</h2>
+      <h2 class="logo"><a href="index.html">The Paper</a></h2>
       <input type="checkbox" id="chk">
       <label for="chk" class="show-menu-btn">
         <i class="fas fa-ellipsis-h"></i>
       </label>
       <ul class="menu">
-        <a href="#">About</a>
+        <a href="about.html">About</a>
         <a href="Authors.html">Authors</a>
         <a href="LS.html">Articles</a>
         <label for="chk" class="hide-menu-btn">
@@ -27,7 +27,39 @@
     <div class="pgrid">
       <div class="profilecard">
         <div class="front side">
-          <h1 class="plogo"> Hugo Sahlin </h3>
+          <h1 class="plogo"> Hugo Sahlin </h1>
+        </div>
+        <div class="back side">
+        </div>
+
+      </div>
+      <div class="profilecard">
+        <div class="front side">
+          <h1 class="plogo"> Lucas Olsson </h1>
+        </div>
+        <div class="back side">
+        </div>
+
+      </div>
+      <div class="profilecard">
+        <div class="front side">
+          <h1 class="plogo"> Anton Ekberg </h1>
+        </div>
+        <div class="back side">
+        </div>
+
+      </div>
+      <div class="profilecard">
+        <div class="front side">
+          <h1 class="plogo"> Samuel Rod </h1>
+        </div>
+        <div class="back side">
+        </div>
+
+      </div>
+      <div class="profilecard">
+        <div class="front side">
+          <h1 class="plogo"> Max Gille </h3>
         </div>
         <div class="back side">
         </div>
