--- a/LS.html
+++ b/LS.html
@@ -20,7 +20,7 @@
         <i class="fas fa-ellipsis-h"></i>
       </label>
       <ul class="menu">
-        <a href="#">About</a>
+        <a href="about.html">About</a>
         <a href="Authors.html">Authors</a>
         <a href="LS.html">Articles</a>
         <label for="chk" class="hide-menu-btn">
