--- a/SweArticles/Witcher.html
+++ b/SweArticles/Witcher.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-16">
-    <title>On the terrible defeat</title>
+    <title>The Witcher</title>
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@1,500&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
         <i class="fas fa-ellipsis-h"></i>
       </label>
       <ul class="menu">
-        <a href="#">About</a>
+        <a href="../about.html">About</a>
         <a href="../Authors.html">Authors</a>
         <a href="../LS.html">Articles</a>
         <a href="#"></a>
