final fix(hopefully)

--- a/about.html
+++ b/about.html
@@ -3,7 +3,6 @@
     <head>
       <meta charset="utf-8">
       <title>The Paper - About</title>
-
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
       <link rel= "stylesheet" href="css/navbar.css">
@@ -30,7 +29,7 @@
       </div>
       <div class="about">
         <h1>Introduction</h1>
-        <p>So what is "The Paper". This is a school project and all the articles here are written by students at Dalskolan. The newspaper itself is supposed to be as close to the truth as possible. The website itself is made with purely CSS and HTML5 and without the use of cheating such as Wix.com or Squarespace by me, Hugo Sahlin.</p>
+        <p>So what is "The Paper". This is a school project and all the articles here are written by students at Dalskolan. The newspaper itself is supposed to be as close to the truth as possible. The website itself is made with purely CSS and HTML5 and without the use of cheating such as Wix.com or Squarespace by me, Hugo Sahlin. I want to credit the youtube channel <a href="https://www.youtube.com/channel/UCD3KVjbb7aq2OiOffuungzw">DarkCode</a> for creating the base that would go on to be the navigational bar that you see at the top of every page.</p>
 
         <h1>Picture sources:</h1>
 
